add api docs for accused entity
